[gd_scene format=3 uid="uid://dwx0cuggwqqml"]

[ext_resource type="Script" uid="uid://b1t13ojjiieas" path="res://scenes/ui/screens/dashboard_panel/sections/research_section_ui.gd" id="1_wg0qf"]

[node name="ResearchSectionUI" type="VBoxContainer" unique_id=696280825]
script = ExtResource("1_wg0qf")

[node name="TechTitleLabel" type="Label" parent="." unique_id=1405654311]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="." unique_id=2045285316]
layout_mode = 2

[node name="TimeRemainingLabel" type="Label" parent="." unique_id=1130062561]
layout_mode = 2
